--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,9 @@ output: md_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+[![DOI](https://zenodo.org/badge/468420166.svg)](https://zenodo.org/badge/latestdoi/468420166)
+
+
 # Modeling distribution of *Myrcia* species
 
 The goal is to model the species distribution for all *Myrcia* species with occurrence records available and with good quality. 
